# ChangeLog for sys-apps/pcmcia-cs
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.73 2004/09/27 05:23:49 cardoe Exp $

  27 Sep 2004; Doug Goldstein <cardoe@gentoo.org> pcmcia-cs-3.2.5-r1.ebuild,
  pcmcia-cs-3.2.5.ebuild, pcmcia-cs-3.2.7-r1.ebuild, pcmcia-cs-3.2.7.ebuild:
  added note about CRC32 library functions that need to be modules or compiled in

*pcmcia-cs-3.2.7-r1 (10 Sep 2004)

  10 Sep 2004; Doug Goldstein <cardoe@gentoo.org>
  +files/cardinfo-install-3.2.7.patch, +pcmcia-cs-3.2.7-r1.ebuild:
  QA issue: install cardinfo & xcardinfo into /usr/bin rather then /usr/X11R6/bin

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  pcmcia-cs-3.2.7.ebuild:
  Masked pcmcia-cs-3.2.7.ebuild stable for ppc

  30 Aug 2004; Robin H. Johnson <robbat2@gentoo.org> pcmcia-cs-3.2.7.ebuild:
  Add ~mips for the XXS1500 unit.

  09 Jul 2004; Travis Tilley <lv@gentoo.org> pcmcia-cs-3.1.34-r8.ebuild,
  pcmcia-cs-3.2.4.ebuild, pcmcia-cs-3.2.5-r1.ebuild, pcmcia-cs-3.2.5.ebuild,
  pcmcia-cs-3.2.7.ebuild:
  switch linux-headers dependency to virtual/os-headers

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> pcmcia-cs-3.1.34-r8.ebuild:
  sync IUSE (+apm, +build, +nocardbus, +pnp, +trusted, +wavelan)

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> pcmcia-cs-3.1.34-r8.ebuild,
  pcmcia-cs-3.2.4.ebuild:
  QA - fix use invocation

  18 Mar 2004; Peter Johanson <latexer@gentoo.org> files/pcmcia.rc:
  Added a slightly smarter check for pcmcia present in the kernel before
  attempting to modprobe things. Thanks to Scott Taylor <swtaylor@gentoo.org>
  for the suggestion.

  18 Feb 2004; Brad House <brad_mssw@gentoo.org> pcmcia-cs-3.2.7.ebuild:
  amd64 stable

  10 Feb 2004; Peter Johanson <latexer@gentoo.org> pcmcia-cs-3.2.7.ebuild:
  Small fix for integer test

  08 Feb 2004; Peter Johanson <latexer@gentoo.org> pcmcia-cs-3.2.5-r1.ebuild: