@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pcmcia-cs
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.73 2004/09/27 05:23:49 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/ChangeLog,v 1.74 2004/10/04 05:11:18 iggy Exp $
+
+  04 Oct 2004; <iggy@gentoo.org> pcmcia-cs-3.2.7-r1.ebuild:
+  switched custom ARCH setting code to use set_arch_to_* from eutils
 
   27 Sep 2004; Doug Goldstein <cardoe@gentoo.org> pcmcia-cs-3.2.5-r1.ebuild,
   pcmcia-cs-3.2.5.ebuild, pcmcia-cs-3.2.7-r1.ebuild, pcmcia-cs-3.2.7.ebuild:
